; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_calls.c_call_expr_flags.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_calls.c_call_expr_flags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@POINTER_TYPE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @call_expr_flags(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %5 = load i64, i64* %2, align 8
  %6 = call i64 @get_callee_fndecl(i64 %5)
  store i64 %6, i64* %4, align 8
  %7 = load i64, i64* %4, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %1
  %10 = load i64, i64* %4, align 8
  %11 = call i32 @flags_from_decl_or_type(i64 %10)
  store i32 %11, i32* %3, align 4
  br label %29

12:                                               ; preds = %1
  %13 = load i64, i64* %2, align 8
  %14 = call i64 @TREE_OPERAND(i64 %13, i32 0)
  %15 = call i64 @TREE_TYPE(i64 %14)
  store i64 %15, i64* %2, align 8
  %16 = load i64, i64* %2, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %27

18:                                               ; preds = %12
  %19 = load i64, i64* %2, align 8
  %20 = call i64 @TREE_CODE(i64 %19)
  %21 = load i64, i64* @POINTER_TYPE, align 8
  %22 = icmp eq i64 %20, %21
  br i1 %22, label %23, label %27

23:                                               ; preds = %18
  %24 = load i64, i64* %2, align 8
  %25 = call i64 @TREE_TYPE(i64 %24)
  %26 = call i32 @flags_from_decl_or_type(i64 %25)
  store i32 %26, i32* %3, align 4
  br label %28

27:                                               ; preds = %18, %12
  store i32 0, i32* %3, align 4
  br label %28

28:                                               ; preds = %27, %23
  br label %29

29:                                               ; preds = %28, %9
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i64 @get_callee_fndecl(i64) #1

declare dso_local i32 @flags_from_decl_or_type(i64) #1

declare dso_local i64 @TREE_TYPE(i64) #1

declare dso_local i64 @TREE_OPERAND(i64, i32) #1

declare dso_local i64 @TREE_CODE(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
